--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,4 +1,5 @@
 @import "normalize.css";
+* { touch-action: none; }
 
 /*:root -> 获取根元素html*/
 :root {
@@ -6,7 +7,6 @@
     --color-high-text: #ff5777;
     --color-tint: #ff8198;
     --color-background: #fff;
-    --font-size: 14px;
     --line-height: 1.5;
 }
 
@@ -54,3 +54,4 @@ a {
 .right {
     float: right;
 }
+
